Control Version commit

--- a/HowLong/HowLong/HowLong.csproj
+++ b/HowLong/HowLong/HowLong.csproj
@@ -20,6 +20,8 @@
     <PackageReference Include="ReactiveUI.Fody" Version="10.5.7" />
     <PackageReference Include="ReactiveUI.XamForms" Version="10.5.7" />
     <PackageReference Include="SkiaSharp.Views.Forms" Version="1.68.0" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="Xam.Plugin.LatestVersion" Version="1.1.2" />
     <PackageReference Include="Xam.Plugins.Messaging" Version="5.2.0" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xam.Plugins.Vibrate" Version="4.0.0.5" />
