--- a/HowLong/HowLong.iOS/HowLong.iOS.csproj
+++ b/HowLong/HowLong.iOS/HowLong.iOS.csproj
@@ -157,6 +157,9 @@
     <PackageReference Include="ReactiveUI.XamForms">
       <Version>10.5.7</Version>
     </PackageReference>
+    <PackageReference Include="Refractored.FloatingActionButtonForms">
+      <Version>2.1.0</Version>
+    </PackageReference>
     <PackageReference Include="SkiaSharp.Views.Forms">
       <Version>1.68.0</Version>
     </PackageReference>
@@ -175,7 +178,7 @@
     <PackageReference Include="Xam.Plugins.Vibrate">
       <Version>4.0.0.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.947036" />
+    <PackageReference Include="Xamarin.Forms" Version="4.3.0.991211" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
@@ -190,5 +193,8 @@
   </ItemGroup>
   <ItemGroup>
     <LinkDescription Include="LinkDescription.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\plusImage.png" />
   </ItemGroup>
 </Project>
