--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   clean:
-    runs-on: windows
+    runs-on: windows-latest
     
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -35,7 +35,7 @@ jobs:
 
   restore:
     # The type of runner that the job will run on
-    runs-on: windows
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -48,7 +48,7 @@ jobs:
   
   build:
     # The type of runner that the job will run on
-    runs-on: windows
+    runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
