--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Clean Project
-      run: dotnet clean
+      run: dotnet clean */**/**/HowLong.csproj -c Release
 
   restore:
     # The type of runner that the job will run on
     runs-on: windows-latest
+    
+    needs: [ clean ]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -49,6 +51,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: windows-latest
+    
+    needs: [ restore ]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -57,4 +61,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Build Project
-      run: dotnet build
+      run: dotnet build */**/**/HowLong.csproj -c Release --no-restore
