--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Clean Project
-      run: dotnet clean HowLong\HowLong\HowLong\HowLong\HowLong.csproj -c Release
+      run: dotnet clean HowLong/HowLong/HowLong.csproj -c Release
 
   restore:
     # The type of runner that the job will run on
@@ -61,4 +61,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Build Project
-      run: dotnet build HowLong\HowLong\HowLong\HowLong\HowLong.csproj -c Release --no-restore
+      run: dotnet build HowLong/HowLong/HowLong.csproj -c Release --no-restore
