--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Restore nuget
-      run: dotnet restore
+      run: nuget restore HowLong/HowLong/HowLong.csproj
   
   build:
     # The type of runner that the job will run on
