--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Build Project
-      run: dotnet build HowLong/HowLong/HowLong.csproj -c Release --no-restore
+      run: dotnet build HowLong/HowLong/HowLong.csproj -c Release
