--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,13 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  files:
+    runs-on: windows-latest
+    
+    steps:
+    - name: Display files
+      run: dir /ad
+  
   # This workflow contains a single job called "build"
   clean:
     runs-on: windows-latest
