--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     
     steps:
     - name: Display files
-      run: dir
+      run: dir /s
   
   # This workflow contains a single job called "build"
   clean:
